Updated class design & Added JavaFX14 lib